@@ -40,6 +40,14 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="5.3.6" date="2023-06-11">
+      <description>
+	<p>
+	  Fixed bug ramp automation dialog apply.
+	</p>
+      </description>
+    </release>
+
     <release version="5.3.5" date="2023-06-11">
       <description>
 	<p>
